--- a/src/components/Header/Header.module.scss
+++ b/src/components/Header/Header.module.scss
@@ -1,6 +1,6 @@
 .container {
   width: 100%;
-  height: 4rem;
+  height: var(--header-height);
   box-sizing: border-box;
   border: 0 solid #e5e7eb;
 
