--- a/src/components/SnowEffect/SnowEffect.module.scss
+++ b/src/components/SnowEffect/SnowEffect.module.scss
@@ -3,7 +3,7 @@
   top: 0;
   left: 0;
   width: 100%;
-  height: 500px;
+  height: 50vh;
   pointer-events: none;
   z-index: 1000;
 
@@ -14,7 +14,7 @@
     top: 0;
     left: 0;
     width: 100%;
-    height: 500px;
+    height: 50vh;
     background: url('data:image/svg+xml;utf8,<svg xmlns="http://www.w3.org/2000/svg" width="100" height="100" viewBox="0 0 100 100"><circle cx="5" cy="5" r="5" fill="white"/></svg>')
       repeat;
     background-size: 10px 10px;
