--- a/src/components/SnowLink/SnowLink.module.scss
+++ b/src/components/SnowLink/SnowLink.module.scss
@@ -8,7 +8,14 @@
     color 0.3s ease,
     border-color 0.3s ease;
 
+  display: flex;
+  align-items: center;
+  justify-content: center;
   font-size: 0.875rem;
+
+  svg {
+    width: 24px;
+  }
 
   &:hover {
     color: var(--snow-colors-primary-main);
