--- a/src/app/(side-nav)/layout.module.scss
+++ b/src/app/(side-nav)/layout.module.scss
@@ -3,7 +3,7 @@
 }
 
 .content {
-  margin-left: 250px;
+  margin-left: var(--side-nav-width);
   padding: 20px;
   flex-grow: 1;
   max-height: calc(100vh - var(--header-height));
