style: add width of 100% to sidenav on small devices

--- a/src/components/SideNav/SideNav.module.scss
+++ b/src/components/SideNav/SideNav.module.scss
@@ -85,6 +85,14 @@
     }
   }
 
+  @media (max-width: 400px) {
+    .overlay {
+      .sideNav {
+        width: 100%;
+      }
+    }
+  }
+
   @media (max-width: 768px) {
     .overlay {
       .sideNav {
