feat: improve docs usage with more component documentation

--- a/src/app/globals.scss
+++ b/src/app/globals.scss
@@ -17,3 +17,7 @@ body {
   -webkit-font-smoothing: antialiased;
   background: linear-gradient(90deg, #ffffff 0%, #f9fcfe 50%, #f0f9ff 100%);
 }
+
+.arctic-icon-medium {
+  width: 24px;
+}
