--- a/src/app/(side-nav)/layout.module.scss
+++ b/src/app/(side-nav)/layout.module.scss
@@ -6,7 +6,8 @@
   margin-left: var(--side-nav-width);
   padding: 1.5rem;
   flex-grow: 1;
-  max-height: calc(100vh - var(--header-height));
+  margin-top: calc(var(--header-height) / 1.5);
+  // max-height: calc(100vh - var(--header-height));
   overflow-y: auto;
 
   @media (max-width: 768px) {
