--- a/src/components/MetaCards/MetaCards.module.scss
+++ b/src/components/MetaCards/MetaCards.module.scss
@@ -7,6 +7,11 @@
 
   a {
     text-decoration: none;
+    border: 2px solid transparent;
+
+    &:hover {
+      border-bottom-color: var(--snow-colors-primary-700, '#ccc');
+    }
   }
 
   .item {
@@ -14,7 +19,9 @@
     box-shadow: rgba(0, 0, 0, 0.16) 0px 1px 4px;
     color: var(--snow-colors-grey-900);
     width: 100%;
+    height: 100%;
     max-width: 300px;
+
     &:hover {
       box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
     }
@@ -27,6 +34,7 @@
     .subTitle {
       font-weight: 400;
       font-size: 14px;
+      line-height: 1.5;
     }
   }
 
