--- a/src/components/SideNav/SideNav.module.scss
+++ b/src/components/SideNav/SideNav.module.scss
@@ -51,7 +51,11 @@
         cursor: pointer;
         display: flex;
         align-items: center;
-        padding: 0 10px;
+        padding: 4px 4px;
+
+        &:hover {
+          background-color: var(--snow-colors-primary-100);
+        }
       }
 
       .caretIcon {
