--- a/src/components/SideNav/Toggler.module.scss
+++ b/src/components/SideNav/Toggler.module.scss
@@ -7,9 +7,9 @@
   align-items: center;
   width: 100%;
   height: 100%;
-
   height: 36px;
   width: 36px;
+  z-index: 1;
 
   &::before,
   &::after {
@@ -42,7 +42,7 @@
   }
   @media (max-width: 768px) {
     display: inline-flex;
-    position: absolute;
+    position: fixed;
     top: 6px;
     left: 16px;
   }
