--- a/src/styles/markdown.module.scss
+++ b/src/styles/markdown.module.scss
@@ -47,10 +47,10 @@
   a {
     color: #00509e;
     text-decoration: none;
-    border-bottom: 1px dashed var(--snow-colors-primary-main);
+    border-bottom: 1px solid transparent;
 
     &:hover {
-      border-bottom-style: solid;
+      border-bottom-color: var(--snow-colors-primary-main);
     }
   }
 
@@ -96,5 +96,9 @@
     padding: 10px 15px;
     margin: 20px 0;
     color: #7c4d00;
+  }
+
+  .moreInfo {
+    padding: 24px 0;
   }
 }
