--- a/src/components/Footer/Footer.module.scss
+++ b/src/components/Footer/Footer.module.scss
@@ -8,6 +8,12 @@
   width: 100%;
   //   bottom: 0;
 
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  gap: 6px;
+
   .builtBy {
     color: white;
     display: flex;
