--- a/src/components/SnowLink/SnowLink.module.scss
+++ b/src/components/SnowLink/SnowLink.module.scss
@@ -1,14 +1,13 @@
 .container {
   color: #000;
   text-decoration: none;
-  padding: 0.5rem;
   white-space: nowrap;
   border: 2px solid transparent;
   transition:
     color 0.3s ease,
     border-color 0.3s ease;
 
-  display: flex;
+  display: inline-flex;
   align-items: center;
   justify-content: center;
   font-size: 0.875rem;
