--- a/src/components/SideNav/SideNav.module.scss
+++ b/src/components/SideNav/SideNav.module.scss
@@ -52,9 +52,15 @@
         display: flex;
         align-items: center;
         padding: 4px 4px;
+        outline: 0.5px solid transparent;
 
         &:hover {
           background-color: var(--snow-colors-primary-100);
+        }
+
+        &:active,
+        &:focus {
+          outline-color: var(--snow-colors-primary-main);
         }
       }
 
