--- a/src/components/SnowLink/SnowLink.module.scss
+++ b/src/components/SnowLink/SnowLink.module.scss
@@ -12,6 +12,10 @@
   justify-content: center;
   font-size: 0.875rem;
 
+  outline: 0.5px solid transparent;
+  outline-offset: 1px;
+  border-radius: 2px;
+
   svg {
     width: 24px;
   }
@@ -20,7 +24,12 @@
     color: var(--snow-colors-primary-main);
   }
 
-  &:active {
+  &:active,
+  &:focus {
     color: var(--snow-colors-primary-700);
+  }
+
+  &:active {
+    outline-color: var(--snow-colors-primary-main);
   }
 }
