--- a/src/components/Searchbar/Searchbar.module.scss
+++ b/src/components/Searchbar/Searchbar.module.scss
@@ -7,6 +7,10 @@
 }
 
 .searchBarInputDesktop {
+  .searchBarInputField {
+    background-color: var(--snow-colors-neutral-0);
+    cursor: pointer;
+  }
   @media (max-width: 480px) {
     display: none;
   }
