--- a/src/components/ComponentMeta/ComponentMeta.module.scss
+++ b/src/components/ComponentMeta/ComponentMeta.module.scss
@@ -25,6 +25,10 @@
       align-items: center;
       justify-content: flex-start;
       gap: 8px;
+
+      svg {
+        width: 16px;
+      }
     }
   }
 
