--- a/src/components/MetaCards/MetaCards.module.scss
+++ b/src/components/MetaCards/MetaCards.module.scss
@@ -16,7 +16,7 @@
 
   .item {
     padding: 16px;
-    box-shadow: rgba(0, 0, 0, 0.16) 0px 1px 4px;
+    box-shadow: var(--snow-shadow-100);
     color: var(--snow-colors-grey-900);
     width: 100%;
     height: 100%;
