--- a/src/app/page.module.scss
+++ b/src/app/page.module.scss
@@ -11,7 +11,7 @@
   gap: 24px;
   padding: 24px;
   //   border-bottom: 0.25px solid grey;
-  background: linear-gradient(90deg, #ffffff 0%, #f9fcfe 50%, #f0f9ff 100%);
+  background: var(--background-gradient);
 
   .centeredText {
     text-align: center;
@@ -32,14 +32,14 @@
     }
 
     p {
-      color: rgb(94, 95, 110);
+      color: var(--snow-colors-grey-800);
       font-size: 1rem; // default size for small screens
       line-height: 1.5;
     }
 
     .actionButton {
       background-color: var(--snow-colors-primary-main);
-      color: var(--snow-colors-neutral-0);
+      color: var(--snow-colors-white);
       padding: 10px 20px;
       height: 40px;
       display: flex;
@@ -48,7 +48,7 @@
       border-radius: 4px;
       &:hover {
         background-color: var(--snow-colors-primary-600);
-        color: var(--snow-colors-neutral-0);
+        color: var(--snow-colors-white);
         font-weight: 500;
       }
     }
