--- a/src/components/CodeBlock/CodeBlockSection.module.scss
+++ b/src/components/CodeBlock/CodeBlockSection.module.scss
@@ -13,7 +13,7 @@
 
   .container {
     padding: 1rem;
-    background-color: #fff;
+    background-color: var(--snow-colors-neutral-0);
     overflow-x: auto;
     flex: 1;
   }
@@ -27,6 +27,8 @@
   max-height: 0;
   transition: max-height 0.3s ease;
   overflow-y: auto;
+  border: 1px solid var(--snow-colors-grey-200);
+  border-radius: 4px;
 
   &.visible {
     max-height: 500px;
