--- a/src/components/Header/Header.module.scss
+++ b/src/components/Header/Header.module.scss
@@ -4,11 +4,12 @@
   box-sizing: border-box;
   border: 0 solid #e5e7eb;
 
-  box-shadow:
-    0 0 #0000,
-    0 0 #0000,
-    0 2px 4px rgba(0, 0, 0, 0.02),
-    0 1px 0 rgba(0, 0, 0, 0.06);
+  // box-shadow:
+  //   0 0 #0000,
+  //   0 0 #0000,
+  //   0 2px 4px rgba(0, 0, 0, 0.02),
+  //   0 1px 0 rgba(0, 0, 0, 0.06);
+  box-shadow: var(--snow-shadow-50);
 
   backdrop-filter: 12px;
   //   background-color: rgba(250, 250, 250, 0.7);
@@ -18,7 +19,7 @@
   justify-content: space-between;
   padding: 4px 24px;
   position: fixed;
-  background: linear-gradient(90deg, #ffffff 0%, #f9fcfe 50%, #f0f9ff 100%);
+  background: var(--background-gradient);
   z-index: 2;
 
   .left {
@@ -43,9 +44,14 @@
     align-items: center;
     justify-content: flex-end;
     gap: 16px;
-    svg {
-      color: #000;
-    }
+  }
+}
+
+.colorSchemeIcon {
+  width: 44px;
+  height: 32px;
+  svg {
+    width: 16px;
   }
 }
 
