--- a/src/components/ScrollToTop/ScrollToTop.module.scss
+++ b/src/components/ScrollToTop/ScrollToTop.module.scss
@@ -19,7 +19,7 @@
   z-index: 10;
 
   &:hover {
-    background-color: #2563eb;
+    background-color: var(--snow-colors-primary-700);
     transform: translateY(-5px);
     cursor: pointer;
   }
