--- a/src/components/SideNav/SideNav.module.scss
+++ b/src/components/SideNav/SideNav.module.scss
@@ -5,7 +5,7 @@
     top: var(--header-height);
     height: calc(100% - var(--header-height));
     width: var(--side-nav-width);
-    border-right: 1px solid var(--snow-colors-grey-100);
+    border-right: 1px solid var(--snow-colors-grey-200);
     color: var(--snow-colors-grey-900);
     padding: 0.5rem;
     transition: transform 0.3s ease-in-out;
@@ -55,25 +55,26 @@
         outline: 0.5px solid transparent;
 
         &:hover {
-          background-color: var(--snow-colors-primary-100);
+          background-color: var(--snow-colors-grey-100);
         }
 
         &:active,
         &:focus {
-          outline-color: var(--snow-colors-primary-main);
+          outline-color: var(--snow-colors-grey-main);
         }
       }
 
       .caretIcon {
         width: 20px;
         height: 20px;
+        color: var(--snow-colors-grey-900);
       }
     }
 
     .active {
       font-weight: 600;
-      background-color: var(--snow-colors-primary-50);
-      color: var(--snow-colors-primary-700);
+      background-color: var(--snow-colors-grey-300);
+      color: var(--snow-colors-grey-900);
     }
 
     .navList {
@@ -99,6 +100,7 @@
     .overlay {
       .sideNav {
         width: 100%;
+        box-shadow: var(--snow-shadow-100);
       }
     }
   }
@@ -108,7 +110,7 @@
       .sideNav {
         transform: translateX(-100%); // Start hidden off-screen to the left
         padding: 10px;
-        background-color: #fff;
+        background-color: var(--snow-colors-neutral-0);
         transition: transform 0.2s ease-in-out; // Smooth transition for sliding effect
         .navLinks {
           flex-direction: column;
@@ -117,7 +119,7 @@
 
       &.toggled {
         display: block;
-        background-color: #fff;
+        background-color: var(--snow-colors-neutral-0);
         position: relative;
         z-index: 1501;
         .sideNav {
