--- a/src/components/SnowLink/SnowLink.module.scss
+++ b/src/components/SnowLink/SnowLink.module.scss
@@ -1,5 +1,5 @@
 .container {
-  color: #000;
+  color: var(--snow-colors-neutral-1000);
   text-decoration: none;
   white-space: nowrap;
   border: 2px solid transparent;
