--- a/src/components/CodeBlock/ActionButton.module.scss
+++ b/src/components/CodeBlock/ActionButton.module.scss
@@ -3,7 +3,7 @@
   width: 32px;
   border-radius: 5px;
   border: none;
-  color: var(--snow-colors-grey-900);
+  color: #eee;
   cursor: pointer;
   padding: 0;
   display: flex;
@@ -18,6 +18,6 @@
   }
 
   &:hover {
-    background-color: var(--snow-colors-grey-200);
+    color: #fff;
   }
 }
