--- a/src/app/globals.scss
+++ b/src/app/globals.scss
@@ -1,17 +1,53 @@
 :root {
+  --side-nav-width: 220px;
+
+  // code block
+  --code-block-bg-color: #0c0734;
+  --code-block-color: #fff;
+
+  // header
   --header-height: 3rem;
   --header-padding-left: 54px;
-  --side-nav-width: 220px;
-  /* Default background for light theme (this can be overridden in theme-light) */
-  --background-gradient: linear-gradient(
-    90deg,
-    #ffffff 0%,
-    #f9fcfe 50%,
-    #f0f9ff 100%
-  );
+  --header-bg-color: #fffc;
+  --accents-2: #eaeaea;
+  --header-box-shadow: inset 0 -1px 0 0 var(--accents-2);
 
-  --code-block-bg-color: #262052;
-  --code-block-color: #fff;
+  // background
+  --background-color: var(--snow-colors-neutral-0);
+
+  /* Light theme colors */
+  --arctic-light-1: color(display-p3 0.98 0.99 1); /* Very light blue */
+  --arctic-light-2: color(
+    display-p3 0.99 0.99 1
+  ); /* Almost pure white with a hint of lavender */
+  --arctic-light-3: color(display-p3 0.97 0.98 1); /* Very soft mint */
+  --arctic-light-4: color(display-p3 0.95 0.97 1); /* Soft cyan */
+  --arctic-light-overlay: color(
+    display-p3 0.7 0.2 1 / 0.02
+  ); /* Very subtle violet overlay */
+
+  /* Dark theme colors */
+  --arctic-dark-1: color(display-p3 0.005 0.01 0.02); /* Almost black */
+  --arctic-dark-2: color(display-p3 0.01 0.015 0.02); /* Very deep charcoal */
+  --arctic-dark-3: color(display-p3 0.015 0.02 0.025); /* Almost black cyan */
+  --arctic-dark-4: color(display-p3 0.01 0.015 0.02); /* Ultra dark teal */
+  --arctic-dark-overlay: color(
+    display-p3 0.8 0.1 1 / 0.2
+  ); /* Strong violet overlay */
+
+  --background-gradient: radial-gradient(
+      ellipse at 100% 100%,
+      hsl(210 100% 98% / 0.02),
+      var(--arctic-light-overlay),
+      transparent
+    ),
+    linear-gradient(
+      to bottom right,
+      var(--arctic-light-1),
+      var(--arctic-light-2),
+      var(--arctic-light-3),
+      var(--arctic-light-4)
+    );
 }
 
 * {
@@ -25,28 +61,67 @@ body {
   max-width: 100vw;
   overflow-x: hidden;
   -webkit-font-smoothing: antialiased;
-  background: var(--background-gradient);
+  background: var(--background-color);
 
   color: var(--snow-colors-neutral-1000);
   -webkit-overflow-scrolling: touch;
+  max-height: 100vh;
+}
+
+.gradient-text {
+  --text-gradient: linear-gradient(180deg, #555, #000);
+  background: var(--text-gradient);
+  background-clip: text;
+  -webkit-text-fill-color: #0000;
 }
 
 /* Light Theme */
 .theme-light {
-  --background-gradient: linear-gradient(
-    90deg,
-    #ffffff 0%,
-    #f9fcfe 50%,
-    #f0f9ff 100%
-  );
+  // --background-gradient: var(--snow-colors-neutral-0);
+  --background-gradient: radial-gradient(
+      ellipse at 100% 100%,
+      hsl(210 100% 95% / 0.08),
+      var(--arctic-light-overlay),
+      transparent
+    ),
+    linear-gradient(
+      to bottom right,
+      var(--arctic-light-1),
+      var(--arctic-light-2),
+      var(--arctic-light-3),
+      var(--arctic-light-4)
+    );
 
-  --code-block-bg-color: #262052;
+  --code-block-bg-color: #0c0734;
+
+  --header-bg-color: #fffc;
+  --header-box-shadow: inset 0 -1px 0 0 var(--accents-2);
 }
 
 /* Dark Theme */
 .theme-dark {
-  --background-gradient: var(--snow-colors-neutral-0);
-  --code-block-bg-color: #0c0734;
+  // --background-gradient: #000;
+  --background-gradient: radial-gradient(
+      ellipse at 100% 100%,
+      hsl(210 100% 2% / 0.2),
+      var(--arctic-dark-overlay),
+      transparent
+    ),
+    linear-gradient(
+      to bottom right,
+      var(--arctic-dark-1),
+      var(--arctic-dark-2),
+      var(--arctic-dark-3),
+      var(--arctic-dark-4)
+    );
+
+  --code-block-bg-color: #262052;
+  --header-bg-color: transparent;
+  --header-box-shadow: none;
+
+  .gradient-text {
+    --text-gradient: linear-gradient(180deg, #fff, #adadad);
+  }
 }
 
 .arctic-icon-medium {
