--- a/src/app/page.module.scss
+++ b/src/app/page.module.scss
@@ -2,7 +2,7 @@
   width: 100vw;
   // height: calc(100vh - var(--header-height));
   overflow-y: auto;
-  margin-top: var(--header-height);
+  margin-top: calc(var(--header-height) + 20px);
 }
 .header {
   display: flex;
@@ -10,11 +10,9 @@
   align-items: center;
   gap: 24px;
   padding: 24px;
-  //   border-bottom: 0.25px solid grey;
-  background: var(--background-gradient);
 
   .centeredText {
-    text-align: center;
+    // text-align: center;
     // z-index: 1;
     display: flex;
     flex-direction: column;
@@ -57,6 +55,18 @@
   .imageWrapper {
     display: none; // default hidden
   }
+
+  .headerActionContainer {
+    display: flex;
+    flex-direction: column;
+    gap: 12px;
+    width: 100%;
+
+    button {
+      width: 100%;
+      font-weight: 500;
+    }
+  }
 }
 
 .content {
@@ -78,14 +88,23 @@
         font-size: 1.125rem; // slightly larger for small screens
       }
     }
+
+    .headerActionContainer {
+      flex-direction: row;
+      width: auto;
+      align-items: center;
+      button {
+        width: auto;
+      }
+    }
   }
 }
 
 @media screen and (min-width: 768px) {
   .header {
     .centeredText {
-      align-items: flex-start;
-      text-align: left;
+      // align-items: flex-start;
+      // text-align: left;
       h1 {
         font-size: 3rem; // medium size for medium screens
       }
