--- a/src/components/Feature/Feature.module.css
+++ b/src/components/Feature/Feature.module.css
@@ -1,20 +1,20 @@
 .feature {
-  /* background: #f0f4f8; */
   padding: 1.5rem;
-  margin: 1rem 0;
-  border-radius: 8px;
+  border-radius: 12px;
   width: 100%;
-  /* max-width: 600px; */
-  /* box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1); */
+  min-height: 150px;
+  border: 0.5px solid var(--snow-colors-grey-400);
 }
 
 .feature h2 {
   margin: 0 0 0.5rem 0;
-  font-size: 1.5rem;
+  font-size: 20px;
 }
 
 .feature p {
   margin: 0;
   font-size: 1rem;
   line-height: 1.5;
+  color: var(--snow-colors-grey-800);
+  font-size: 14px;
 }
