--- a/src/components/Header/Header.module.scss
+++ b/src/components/Header/Header.module.scss
@@ -3,23 +3,15 @@
   height: var(--header-height);
   box-sizing: border-box;
   border: 0 solid #e5e7eb;
-
-  // box-shadow:
-  //   0 0 #0000,
-  //   0 0 #0000,
-  //   0 2px 4px rgba(0, 0, 0, 0.02),
-  //   0 1px 0 rgba(0, 0, 0, 0.06);
-  box-shadow: var(--snow-shadow-50);
-
-  backdrop-filter: 12px;
-  //   background-color: rgba(250, 250, 250, 0.7);
+  backdrop-filter: saturate(180%) blur(5px);
 
   display: flex;
   align-items: center;
   justify-content: space-between;
   padding: 4px 24px;
   position: fixed;
-  background: var(--background-gradient);
+  background: var(--header-bg-color);
+  box-shadow: var(--header-box-shadow);
   z-index: 2;
 
   .left {
