--- a/src/components/MetaCards/MetaCards.module.scss
+++ b/src/components/MetaCards/MetaCards.module.scss
@@ -7,23 +7,24 @@
 
   a {
     text-decoration: none;
-    border: 2px solid transparent;
+    // border: 2px solid transparent;
 
     &:hover {
-      border-bottom-color: var(--snow-colors-primary-700, '#ccc');
+      // border-bottom-color: var(--snow-colors-primary-700, '#ccc');
+      border: none;
     }
   }
 
   .item {
     padding: 16px;
-    box-shadow: var(--snow-shadow-100);
+    // box-shadow: var(--snow-shadow-100);
     color: var(--snow-colors-grey-900);
     width: 100%;
     height: 100%;
     max-width: 300px;
 
     &:hover {
-      box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
+      // box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
     }
 
     .title {
