--- a/src/app/page.module.scss
+++ b/src/app/page.module.scss
@@ -2,17 +2,17 @@
   width: 100vw;
   // height: calc(100vh - var(--header-height));
   overflow-y: auto;
-  margin-top: calc(var(--header-height) + 20px);
+  // margin-top: calc(var(--header-height) + 20px);
 }
 .header {
   display: flex;
   justify-content: space-around;
   align-items: center;
   gap: 24px;
-  padding: 24px;
+  padding: 12px;
 
   .centeredText {
-    // text-align: center;
+    text-align: center;
     // z-index: 1;
     display: flex;
     flex-direction: column;
@@ -120,7 +120,7 @@
   }
   .content {
     .title {
-      font-size: 3rem;
+      font-size: 2rem;
     }
   }
 }
