--- a/src/components/Feature/Feature.module.css
+++ b/src/components/Feature/Feature.module.css
@@ -4,11 +4,12 @@
   width: 100%;
   min-height: 150px;
   border: 0.5px solid var(--snow-colors-grey-400);
+  background-color: var(--snow-colors-grey-50);
 }
 
 .feature h2 {
   margin: 0 0 0.5rem 0;
-  font-size: 20px;
+  font-size: 18px;
 }
 
 .feature p {
