feat: add usage examples

--- a/src/app/globals.scss
+++ b/src/app/globals.scss
@@ -115,7 +115,7 @@ body {
       var(--arctic-dark-4)
     );
 
-  --code-block-bg-color: #262052;
+  // --code-block-bg-color: #262052;
   --header-bg-color: transparent;
   --header-box-shadow: none;
 
