--- a/src/app/page.module.scss
+++ b/src/app/page.module.scss
@@ -2,7 +2,6 @@
   width: 100vw;
   // height: calc(100vh - var(--header-height));
   overflow-y: auto;
-  // margin-top: calc(var(--header-height) + 20px);
 }
 .header {
   display: flex;
@@ -10,6 +9,7 @@
   align-items: center;
   gap: 24px;
   padding: 12px;
+  padding-top: calc(var(--header-height) + 20px);
 
   .centeredText {
     text-align: center;
@@ -67,6 +67,15 @@
       font-weight: 500;
     }
   }
+}
+
+.examples {
+  // background: var(--background-gradient);
+}
+
+.examplesWrapper {
+  padding: 16px;
+  overflow-x: auto;
 }
 
 .content {
