feat: use the ThemeSwitch from snow

--- a/src/app/(side-nav)/foundations/icons/listIcons.module.scss
+++ b/src/app/(side-nav)/foundations/icons/listIcons.module.scss
@@ -26,6 +26,10 @@
       padding: 4px;
       position: relative;
 
+      .arcticIcon {
+        width: 24px;
+      }
+
       .copyButton {
         position: absolute;
         right: 6px;
