--- a/src/app/globals.scss
+++ b/src/app/globals.scss
@@ -124,9 +124,9 @@ body {
   }
 }
 
-.arctic-icon-medium {
-  width: 24px;
-}
+// .arctic-icon-medium {
+//   width: 24px;
+// }
 
 #searchbar-modal-content-overlay {
   background: #0008;
