--- a/src/components/MetaCards/MetaCards.module.scss
+++ b/src/components/MetaCards/MetaCards.module.scss
@@ -1,12 +1,13 @@
 .container {
   display: flex;
-  justify-content: space-evenly;
-  gap: 12px;
-  padding: 4px;
+  justify-content: stretch;
+  gap: 24px;
   flex-wrap: wrap;
 
   a {
     text-decoration: none;
+    font-size: 13px;
+    color: var(--snow-colors-primary-main);
     // border: 2px solid transparent;
 
     &:hover {
@@ -16,27 +17,44 @@
   }
 
   .item {
-    padding: 16px;
-    // box-shadow: var(--snow-shadow-100);
     color: var(--snow-colors-grey-900);
-    width: 100%;
-    height: 100%;
-    max-width: 300px;
 
-    &:hover {
-      // box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
+    display: flex;
+    align-items: flex-start;
+    flex-direction: column;
+    justify-content: space-between;
+    max-width: 400px;
+    min-width: 350px;
+    gap: 4px;
+
+    .componentDisplay {
+      padding: 24px;
+      display: flex;
+      align-items: center;
+
+      justify-content: center;
+      width: 100%;
+      height: 100%;
+      height: 400px;
+      overflow-x: auto;
+      overflow-y: auto;
+      border-radius: var(--snow-border-radius-main);
+      box-shadow: var(--snow-shadow-50);
+      background: var(--component-display-bg);
     }
 
     .title {
       font-weight: 700;
-      margin-bottom: 4px;
     }
 
     .subTitle {
       font-weight: 400;
       font-size: 14px;
       line-height: 1.5;
+      text-wrap: wrap;
     }
+
+    margin-bottom: 16px;
   }
 
   @media (max-width: 480px) {
