feat: add mailbox usage example and align routes accordingly

--- a/src/app/globals.scss
+++ b/src/app/globals.scss
@@ -55,23 +55,26 @@
     color(display-p3 0.88 0.865 0.816)
   );
 }
-
 * {
   box-sizing: border-box;
-  padding: 0;
-  margin: 0;
 }
 
 html,
 body {
   max-width: 100vw;
-  overflow-x: hidden;
   -webkit-font-smoothing: antialiased;
   background: var(--background-color);
 
   color: var(--snow-colors-neutral-1000);
   -webkit-overflow-scrolling: touch;
   max-height: 100vh;
+
+  overflow: auto;
+
+  scrollbar-width: thin;
+
+  padding: 0;
+  margin: 0;
 }
 
 .gradient-text {
