--- a/src/components/ComponentMeta/Table.module.scss
+++ b/src/components/ComponentMeta/Table.module.scss
@@ -2,6 +2,15 @@
   width: 100%;
   overflow-x: auto;
   margin: 1rem 0;
+
+  code {
+    background-color: var(--snow-colors-grey-100);
+    border: 0.5px solid var(--snow-colors-grey-300);
+    padding: 2px 6px;
+    display: inline-flex;
+    border-radius: 4px;
+    font-size: 12px;
+  }
 }
 
 .tableCellData {
