--- a/src/components/Header/Header.module.scss
+++ b/src/components/Header/Header.module.scss
@@ -10,6 +10,7 @@
   justify-content: space-between;
   padding: 4px 24px;
   position: fixed;
+  top: 0;
   background: var(--header-bg-color);
   box-shadow: var(--header-box-shadow);
   z-index: 2;
