--- a/src/styles/markdown.module.scss
+++ b/src/styles/markdown.module.scss
@@ -3,7 +3,7 @@
   color: var(--snow-colors-grey-900);
   max-width: 1280px;
   margin: 0 auto;
-  padding: 20px;
+  padding: 8px;
   h1,
   h2,
   h3,
@@ -11,6 +11,7 @@
   h5,
   h6 {
     color: var(--snow-colors-neutral-1000);
+    margin: 0;
     margin-bottom: 20px;
     border-bottom: 0.5px solid #e6e6e6;
     padding-bottom: 5px;
@@ -36,8 +37,11 @@
 
   ul,
   ol {
-    margin-left: 20px;
-    margin-bottom: 20px;
+    margin: 0;
+    padding: 0;
+    margin-left: 12px;
+    margin-bottom: 12px;
+    list-style: none;
   }
 
   a {
